tests/auto/qml/qqmlcomponent/data/requiredPropertiesInAttached.bad2.qml
import qt.test 1.0
import QtQml
QtObject {
    AttachedRequiredProperty.index: -1
} // error: we don't support required attached properties
